tests/solidity-semantic-tests/out/errors/require_error_evaluation_order_3/C.clear.teal
#pragma version 10
#pragma typetrack false

// /home/argi/AlgorandFoundation/SideProjects/puya-sol/puya-sol/tests/solidity-semantic-tests/tests/errors/require_error_evaluation_order_3.sol.C.clear_state_program() -> uint64:
main:
    pushint 1
    return
